--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "rgbe"
-version = "0.1.0"
+version = "0.0.1-alpha"
 edition = "2021"
+
+license = "MIT OR Apache-2.0"
+description = "A library for handling RGBE-format HDR images."
+authors = ["George Steel"]
+readme = "README.md"
+
+repository = "https://github.com/george-steel/rgbe-rs"
 
 [lib]
 crate-type = ["rlib"]
