--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ homepage = "https://github.com/george-steel/rgbe-rs"
 documentation = "https://docs.rs/rgbe"
 
 [lib]
-crate-type = ["rlib"]
+crate-type = ["lib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
